prevent radio button focus from making page jump (#348)

--- a/addon/components/boxel/custom-radio/container/index.css
+++ b/addon/components/boxel/custom-radio/container/index.css
@@ -12,4 +12,5 @@
   left: -9999px;
   max-width: 1px;
   max-height: 1px;
+  white-space: nowrap;
 }
