--- a/addon/components/boxel/custom-radio/item/index.css
+++ b/addon/components/boxel/custom-radio/item/index.css
@@ -9,6 +9,8 @@
 /* https://css-tricks.com/customise-radio-buttons-without-compromising-accessibility/ */
 .boxel-custom-radio__hidden-input {
   position: absolute;
+  top: 0;
+  left: 0;
   clip-path: polygon(0 0);
   width: 1px;
   height: 1px;
